<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIconGiaoDich"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:scaleType="centerInside"
            android:src="@drawable/tran_food" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:alpha="0.87"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTenGiaoDich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:singleLine="true"
                android:text="@string/ten_giao_dich"
                android:textColor="@color/black_85"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGhiChuGiaoDich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/ghi_chu_giao_dich" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSoTienGiaoDich"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:alpha="0.87"
            android:gravity="end"
            android:singleLine="true"
            android:text="@string/so_du_hien_tai3"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="8dp"
        android:alpha="0.1"
        android:background="@color/black" />

</LinearLayout>
